   input layers.
 - Added padding and cutout transformations

Build system:
 - Added support for using uptream Spack repositories
 - Added support to reuse existing Spack environments, which
   significantly decreases the startup time of running a CI job
 - Enforce consistent GPU targets in Spack environment
 - Switched from Bamboo to GitLab CI framework

Bug fixes:
 - Fixed GPU kernels that launched with more blocks than allowed
 - Fixed build and runtime errors with DistConv
 - Use correct LayerNorm operaton in "Attention Is All You Need"
   Transformer
 - Fixed a bug where the input layer performed unnecessary memory
   allocations.
 - Bug fixes within Cosmoflow and U-Net models
 - Fixed a bug in the GPU-based computation of the batchnorm
 statistics
 - Patch for when distconv'd input layer is followed by non-distconv layer
 - Bugfix input layer activations: Fixed the input layer so that it
   would only resize the activation matrix if it wasn't already setup
   to be a view of the data_coordinator's matrix.  This addresses a
   signficant performance bug in the data ingestion where the
   activation matrix was a view into the data coordinator's internal buffers.
 - Fixed bad convolution parameters producing incorrect layer shapes.
 - Enabling tensor copy on distconv-enabled Identity layer
 - General cleanup and improvement in the coverage and robustness of
   CI testing
 - Fix buffer overflow in SMILES data reader
 - Fix a bug in TSE
 - Do not construct bias weights when not needed in conv and FC modules
 - Use tournament set in LTFB with truncation selection exchange
 - Cleanup data reader tests memory leaks
 - Fixed a buffer overrun, heap overflow, and double allocation of the
   data store in the SMILES data reader
 - Match LayerNorm and InstanceNorm layers to PyTorch
 - Make sure GPU grid dims are valid in slice/concat layers
 - Fixed incorrect matrix ording in K-FAC for conv layer
 - Bugfix for polynomial learning rate schedule

Retired features:
