@@ -1,0 +1,191 @@
+################################################################################
+## Copyright (c) 2014-2022, Lawrence Livermore National Security, LLC.
+## Produced at the Lawrence Livermore National Laboratory.
+## Written by the LBANN Research Team (B. Van Essen, et al.) listed in
+## the CONTRIBUTORS file. <lbann-dev@llnl.gov>
+##
+## LLNL-CODE-697807.
+## All rights reserved.
+##
+## This file is part of LBANN: Livermore Big Artificial Neural Network
+## Toolkit. For details, see http://software.llnl.gov/LBANN or
+## https://github.com/LLNL/LBANN.
+##
+## Licensed under the Apache License, Version 2.0 (the "Licensee"); you
+## may not use this file except in compliance with the License.  You may
+## obtain a copy of the License at:
+##
+## http://www.apache.org/licenses/LICENSE-2.0
+##
+## Unless required by applicable law or agreed to in writing, software
+## distributed under the License is distributed on an "AS IS" BASIS,
+## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+## implied. See the License for the specific language governing
+## permissions and limitations under the license.
+################################################################################
+
+# This is the testing pipeline for the Lassen cluster at LLNL. This
+# cluster builds the LBANN applications and libraries using a single
+# compiler toolchain and then runs a collection of tests. Testing
+# output is in JUnit format and parsed by the pipeline for web
+# viewing.
+
+stages:
+  - build
+  - test
+  - cleanup
+
+
+# Build LBANN and establish the Spack environment for this pipeline.
+build and install:
+  extends: .lassen common
+  stage: build
+  artifacts:
+    paths:
+      - spack-*.txt
+      - spack-build-*/CMakeCache.txt
+      - spack-build-*/build.ninja
+      - spack-build-*/spack-*.txt
+      - spack-ci-env-name.sh
+      - ${RESULTS_DIR}/*
+  script:
+    - echo "== BUILDING LBANN =="
+    - export BUILD_TASKS=$(($(nproc) + 2))
+    - echo "SPACK_REPO=${HOME}/${SPACK_REPO}"
+    - export GITLAB_SUFFIX=`basename ${CI_BUILDS_DIR}`
+    - export SPACK_ENV_NAME=${SPACK_ENV_BASE_NAME}-${GITLAB_SUFFIX}
+    - source ${HOME}/${SPACK_REPO}/share/spack/setup-env.sh
+    - lalloc 1 -W 30 -q pdebug ./scripts/build_lbann.sh -r
+      -l ${SPACK_ENV_NAME} -j ${BUILD_TASKS}
+      -e ./scripts/common_spack_packages/ci_spack_packages.sh --
+      +deterministic +vision +numpy +unit_tests ${SPACK_SPECS}
+    - export TEST_TASKS_PER_NODE=2
+    - export LBANN_NNODES=1
+    - export TEST_MPIBIND_FLAG="--mpibind=off"
+    - export SPACK_ARCH=$(spack arch)
+    - export SPACK_ARCH_TARGET=$(spack arch -t)
+    - echo "export SPACK_DEP_ENV_NAME=${SPACK_ENV_NAME}" > spack-ci-env-name.sh
+    - echo "export SPACK_ARCH=${SPACK_ARCH}" >> spack-ci-env-name.sh
+    - echo "export SPACK_ARCH_TARGET=${SPACK_ARCH_TARGET}" >> spack-ci-env-name.sh
+    - lalloc ${LBANN_NNODES} -W 30 -q pdebug .gitlab/common/run-catch-tests-lsf.sh
+  timeout: 1h
+
+# Run the Python-based unit tests.
+unit tests:
+  extends:
+    - .lassen common
+    - .uses spack environment
+  stage: test
+  dependencies:
+    - build and install
+  script:
+    - echo "== RUNNING PYTHON-BASED UNIT TESTS =="
+    - echo "Testing $(which lbann)"
+    - export OMP_NUM_THREADS=10
+    - export LBANN_NNODES=1
+    - export TEST_TASKS_PER_NODE=4
+    - lalloc ${LBANN_NNODES} -W 30 -G guests -q pdebug .gitlab/lassen/run_unit_tests.sh
+  artifacts:
+    when: always
+    paths:
+      - ci_test/unit_tests/results.xml
+    reports:
+      junit: ci_test/unit_tests/results.xml
+  timeout: 1h
+
+# Run the Python-based integration tests.
+integration tests:
+  extends:
+    - .lassen common
+    - .uses spack environment
+  stage: test
+  dependencies:
+    - build and install
+  script:
+    - echo "== RUNNING PYTHON-BASED INTEGRATION TESTS =="
+    - echo "Testing $(which lbann)"
+    - export OMP_NUM_THREADS=10
+    - export LBANN_NNODES=2
+    - export TEST_TASKS_PER_NODE=4
+    - export WEEKLY_FLAG=${WITH_WEEKLY:+--weekly}
+    - lalloc ${LBANN_NNODES} -W 45 -G guests -q pdebug .gitlab/lassen/run_integration_tests.sh
+  artifacts:
+    when: always
+    paths:
+      - ci_test/integration_tests/results.xml
+    reports:
+      junit: ci_test/integration_tests/results.xml
+  timeout: 1h
+
+# This is a dummy job that checks the Catch2 testing.
+check catch2 tests:
+  extends:
+    - .lassen common
+  stage: test
+  dependencies:
+    - build and install
+  script:
+    - ([[ $(find ${RESULTS_DIR} -name "catch-tests-failed.txt" | wc -l) -eq 0 ]])
+  artifacts:
+    reports:
+      junit: ${RESULTS_DIR}/*.xml
+
+# Cleanup the pipeline's Spack environment.
+# Switching over to reusing Spack environments for each feature branch so don't remove them immediately
+# Cleanup any build directories and spack environments older than 5 days since last use
+remove spack environment:
+  extends: .lassen common
+  stage: cleanup
+  variables:
+    GIT_STRATEGY: none
+  when: always
+  script:
+    - echo "== REMOVING OLD BUILD RESOURCES =="
+    - source ${HOME}/${SPACK_REPO}/share/spack/setup-env.sh
+    - find ${CI_PROJECT_DIR} -maxdepth 1 -mtime +5 -name "spack-build-*" -type d -exec rm -r {} \;
+    - find ${HOME}/${SPACK_REPO}/var/spack/environments/ -maxdepth 1 -mtime +5 -type d -exec basename {} \; | xargs -r spack env rm --yes-to-all
+
+
+# Load the spack shell integration and load the environment.
+.uses spack environment:
+  before_script:
+    - source ${HOME}/${SPACK_REPO}/share/spack/setup-env.sh
+    - source spack-ci-env-name.sh
+    - spack env activate lbann-${SPACK_DEP_ENV_NAME}-${SPACK_ARCH_TARGET}
+    - spack load lbann@${SPACK_DEP_ENV_NAME}-${SPACK_ARCH_TARGET} arch=${SPACK_ARCH}
+    - export NVSHMEM_IBRC_SUPPORT=1
+    - export NVSHMEM_PMIX_SUPPORT="0"
+    - export NVSHMEM_LIBFABRIC_SUPPORT=0
+
+# Variables for Lassen. Because this test uses "test_compiler.py", we
+# don't need to specify the Spack spec or the job name.
+.lassen common:
+  variables:
+    # Just the obvious identifier. Which specific node doesn't matter.
+    SYSTEM_NAME: lassen
+    SPACK_REPO: spack_repos/spack_${SYSTEM_NAME}.git
+
+    # This is based on the assumption that each runner will only ever
+    # be able to run one pipeline on a given cluster at one time.
+    SPACK_ENV_BASE_NAME: gitlab-multi-stage-${CI_COMMIT_BRANCH}-${GITLAB_USER_LOGIN}-${SYSTEM_NAME}-${CI_RUNNER_SHORT_TOKEN}
+
+    # These are system-specific specs that should be forwarded to the
+    # build script
+    SPACK_SPECS: "+cuda +half +fft"
+
+    # This is needed to ensure that we run as lbannusr.
+    LLNL_SERVICE_USER: lbannusr
+
+    # This needs to be imported here, too. Failure to do so causes
+    # problems if it's not set.
+    LBANN_CI_RUN_WEEKLY: ${LBANN_CI_RUN_WEEKLY}
+
+    # Catch2 output.
+    RESULTS_DIR: results-${CI_PIPELINE_ID}
+
+    # Preserve any spack-build-* directories to allow for faster testing
+    GIT_CLEAN_FLAGS: -ffdx -e spack-build-*
+
+  tags:
+    - lassen
+    - shell
